# Media-Stats-Viewer-Rust

./: package-lock.json  package.json
backend_backup/: Cargo.toml
backend_backup/src/: app.rs  scanner.rs  types.rs
src/: App.tsx  app.rs  index.css  main.rs  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  scanner.rs  types.rs
