[package]
name = "media_stats_viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29.1"
egui = "0.29.1"
egui_extras = { version = "0.29.1", features = ["all_loaders"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
regex = "1.10"
rfd = "0.14"
walkdir = "2.5"
log = "0.4"
env_logger = "0.11"
once_cell = "1.19"
